--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.3.1",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
+    "next": "^16.1.6",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
